--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque hic
+      recusandae modi aperiam deleniti rem assumenda odit placeat tempora
+      quaerat!
+    </p>
+  </body>
 </html>
