--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>GIT</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque hic
       recusandae modi aperiam deleniti rem assumenda odit placeat tempora
